# asciifer

./: LICENSE  README.md  asciifer.py  pyproject.toml
examples/: raphtalia_ascii.txt  raphtalia_braille.txt  shashlik_ascii.txt
